cmake_minimum_required(VERSION 3.17)
project(algorithm_practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithm_practice main.cpp n_queen.cpp fib.cpp 15651.cpp schedule.cpp binarysearch.cpp fibcount.cpp 15650.cpp 14888.cpp 14889.cpp 2580.cpp 7568.cpp 2231.cpp 1018.cpp 2798.cpp 1436.cpp 2750.cpp 2751.cpp 1427.cpp 10989.cpp 11651.cpp 18870.cpp 11650.cpp 10814.cpp 1181.cpp 2108.cpp 11399.cpp 11047.cpp 1541.cpp 13305.cpp 1932.cpp 11054.cpp 11053.cpp 2565.cpp 9461.cpp 1149.cpp 9251.cpp 1912.cpp 1904.cpp 9184.cpp 12865.cpp 2252.cpp 1766.cpp 11279.cpp 1927.cpp 11286.cpp 1655.cpp 15654.cpp 15657.cpp 15663.cpp 15666.cpp 1991.cpp 11444.cpp 11725.cpp 13172.cpp 14938.cpp 9465.cpp 16953.cpp 11660.cpp 1043.cpp 2638.cpp 4948.cpp 1929.cpp 1978.cpp 2581.cpp 11653.cpp 9020.cpp 1011.cpp 1085.cpp 1002.cpp 1759.cpp 1644.cpp 1167.cpp 1157.cpp 2407.cpp 1753.cpp 1916.cpp 1238.cpp 1629.cpp 5639.cpp 1967.cpp 2263.cpp 11404.cpp test.cpp)